--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "version": "0.0.5",
   "description": "Angular Rest Helper Service",
   "main": "dist/angular-rest-helper.min.js",
+  "author": "Orion Free <ofree@upperquadrant.com",
   "dependencies": {
     "bower": "^1.4.1",
+    "chai": "*",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^1.11.0",
     "gulp-preprocess": "orionstein/gulp-preprocess",
     "gulp-angular-filesort": "*",
+    "gulp-karma": "*",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
+    "karma": "*",
+    "karma-mocha": "*",
+    "karma-phantomjs-launcher": "*",
+    "karma-chai": "*",
+    "mocha": "*",
+    "phantomjs": "*",
     "run-sequence": "^1.1.0"
   },
   "devDependencies": {},
