Cache NPM modules

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_script:
   - npm install -g bower
   - bower install --allow-root
 script: gulp test
+cache:
+  directories:
+    - node_modules
