Updating for devDeps

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/orionstein/angular-rest-helper-service"
   },
-  "dependencies": {
+  "devDependencies": {
     "angular": "~1.4.7",
     "angular-mocks": "~1.4.7"
   },
