--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
   "name": "of-angular-rest-helper",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Angular Rest Helper Service",
   "main": "dist/angular-rest-helper.min.js",
   "author": "Orion Free <ofree@upperquadrant.com",
   "dependencies": {
-    "angular": "*",
-    "angular-mocks": "*",
-    "bower": "^1.4.1",
-    "chai": "*",
-    "del": "^1.1.1",
+    "angular": "^1.5.0",
+    "angular-mocks": "^1.5.0",
+    "chai": "^3.5.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-jshint": "^1.11.0",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-karma": "^0.0.5",
     "gulp-preprocess": "orionstein/gulp-preprocess",
-    "gulp-angular-filesort": "*",
-    "gulp-karma": "*",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0",
-    "karma": "*",
-    "karma-mocha": "*",
-    "karma-mocha-reporter": "*",
-    "karma-phantomjs-launcher": "*",
-    "karma-chai": "*",
-    "mocha": "*",
-    "phantomjs": "*",
-    "run-sequence": "^1.1.0"
+    "gulp-uglify": "^1.5.2",
+    "jshint": "^2.9.1",
+    "karma": "^0.13.21",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^1.1.5",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon": "^1.0.4",
+    "mocha": "^2.4.5",
+    "phantomjs-prebuilt": "^2.1.4",
+    "run-sequence": "^1.1.5",
+    "sinon": "^1.17.3"
   },
   "devDependencies": {},
   "scripts": {
