--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "of-angular-rest-helper",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "description": "Angular Rest Helper Service",
   "main": "dist/angular-rest-helper.min.js",
-  "author": "Orion Free <ofree@upperquadrant.com",
+  "author": "Orion Free <ofree@upperquadrant.com>",
+  "contributors": [
+    "Greg Harrison <gharrison@upperquadrant.com>"
+  ],
   "dependencies": {
-    "angular": "^1.5.0",
-    "angular-mocks": "^1.5.0",
-    "chai": "^3.5.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-karma": "^0.0.5",
-    "gulp-preprocess": "orionstein/gulp-preprocess",
+    "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.2",
     "jshint": "^2.9.1",
+    "run-sequence": "^1.1.5"
+  },
+  "devDependencies": {
+    "angular": "^1.5.0",
+    "angular-mocks": "^1.5.0",
+    "chai": "^3.5.0",
+    "gulp-karma": "^0.0.5",
     "karma": "^0.13.21",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.2",
@@ -25,11 +31,9 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon": "^1.0.4",
     "mocha": "^2.4.5",
-    "phantomjs-prebuilt": "^2.1.4",
-    "run-sequence": "^1.1.5",
+    "phantomjs-prebuilt": "^2.1.12",
     "sinon": "^1.17.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "gulp test"
   }
